[tool.poetry]
name = "ecosortify"
version = "0.1.0"
description = "A Flask web application that connects environmentalists to share and act for a greener tomorrow"
authors = ["Boniface Munga"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
Flask-Bootstrap = "^3.3.7"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.6"
Bootstrap-Flask = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
